    included directly before end{document}, both of which were adapted
    correspondingly.
    
  o Improvements in nops_eval(): Show exam ID in HTML report and round
    points to four digits. The language= file paths do not have to be
    absolute anymore. For "interactive" checking/fixing of registration IDs
    the width of scanned subimage is now adapted according to the "reglength".

  o In R/Markdown exercises the question/solution answerlist can now use
    not only "*" but also "-" as the symbol for bullet points (suggested
    by Ben Kasel).

  o Fixed a bug in exams2pdf() where the case of multiple duplicated supplement
    names was not handled correctly (reported by TwelveFifths on StackOverflow).


Changes in Version 2.3-4

  o Avoid execution of examples on CRAN that would necessitate pandoc availability.
    Currently, the "rmarkdown" package but not the underlying "pandoc" support
    is installed for the CRAN checks on Solaris and OS X.


Changes in Version 2.3-3

  o Added new interface exams2canvas() for the open-source Canvas learning
    management system (https://www.instructure.com/canvas/). This is essentially
    a convenience wrapper to exams2qti12() along with a few Canvas-specific
    modifications of the QTI XML specification. The function has only received
    limited testing so far and is likely to improve in future version. The
    supported exercise types are num, schoice, mchoice, and string (but not
    cloze, yet).

  o The default in exams2moodle() has been changed to converter = "pandoc-mathjax".
    Thus, instead of relying on the browser to render mathematical notation
    from MathML, the MathJax plugin is now assumed to be enabled on the
    Moodle server (which is the default when setting up a new Moodle server).
    To employ MathML one can use converter = NULL or converter = "pandoc-mathml"
    etc. See the discussion at http://www.R-exams.org/tutorials/math/ for more
    details.
