@@ -1,5 +1,6 @@
 \name{nops_eval}
 \alias{nops_eval}
+\alias{nops_eval_write}
 
 \title{Evaluate NOPS Exams}
 
@@ -13,11 +14,16 @@
     scans = dir(pattern = "^nops_scan_[[:digit:]]*\\\\.zip$"),
     points = NULL, eval = exams_eval(partial = TRUE, negative = FALSE, rule = "false2"),
     mark = c(0.5, 0.6, 0.75, 0.85), labels = NULL,
-    dir = ".", results = "nops_eval",
-    html = NULL, col = hcl(c(0, 0, 60, 120), c(70, 0, 70, 70), 90),
-    encoding = "UTF-8", language = "en", converter = NULL, interactive = TRUE,
+    dir = ".", results = "nops_eval", file = NULL, flavor = NULL,
+    language = "en", interactive = TRUE,
     string_scans = dir(pattern = "^nops_string_scan_[[:digit:]]*\\\\.zip$"),
-    string_points = seq(0, 1, 0.25))
+    string_points = seq(0, 1, 0.25),
+    \dots)
+
+  nops_eval_write(results = "nops_eval.csv", file = "exam_eval",
+    dir = ".", language = "en", converter = NULL,
+    col = hcl(c(0, 0, 60, 120), c(70, 0, 70, 70), 90), encoding = "UTF-8",
+    html = NULL)
 }
 
 \arguments{
@@ -45,19 +51,16 @@
   \item{dir}{character. File path to the output directory (the default being the
     current working directory).}
   \item{results}{character. Prefix for output files.}
-  \item{html}{character. File name for individual HTML report files, by default
-    the same as \code{register} with suffix \code{.html}.}
-  \item{col}{character. Hex color codes used for exercises with
-    negative, neutral, positive, full solution.}
-  \item{encoding}{character. Encoding of \code{register}, e.g.,
-    \code{"latin1"} or \code{"UTF-8"} (default).}
+  \item{file}{character. File name for individual report files, in the default
+    \code{nops_eval_write} the same as \code{register} with suffix \code{.html}.}
+  \item{flavor}{character. Rather than using the default \code{nops_eval_write}
+    it is possible to call \code{nops_eval_write_<flavor>}. Currently, only
+    the default writer is available but other formats are planned (e.g., Moodle).}
   \item{language}{character. Path to a DCF file with a language specification.
     Currently, the package ships: English (\code{"en"}), Dutch (\code{"nl"}),
     French (\code{"fr"}), German (\code{"de"}), Italian (\code{"it"}),
     Romanian (\code{"ro"}), Portuguese (\code{"pt"}), Spanish (\code{"es"}),
     Turkish (\code{"tr"}).}
-  \item{converter}{character. The HTML converter to be used for the \code{language}
-    text elements. Can be \code{"none"}, \code{"tth"}, or \code{"pandoc"}.}
   \item{interactive}{logical. Should possible errors in the Daten.txt file
     by corrected interactively? Requires the \pkg{png} package for full
     interactivity.}
@@ -67,13 +70,25 @@
   \item{string_points}{numeric. Vector of length 5 with points assigned
     to string results, multiplied with the \code{points} for the corresponding
     exercises.}
+  \item{\dots}{further optional arguments passed from \code{nops_eval} to
+    \code{nops_eval_write} (or any other \code{nops_eval_write_<flavor>}).}
+  \item{converter}{character. The HTML converter to be used for the \code{language}
+    text elements. Can be \code{"none"}, \code{"tth"}, or \code{"pandoc"}.}
+  \item{col}{character. Hex color codes used for exercises with
+    negative, neutral, positive, full solution.}
+  \item{encoding}{character. Encoding of \code{register}, e.g.,
+    \code{"latin1"} or \code{"UTF-8"} (default).}
+  \item{html}{character. Alternative specifciation of the \code{file} name for the
+    individual HTML report files. As \code{html} was used rather than \code{file}
+    in earlier versions of the package, \code{html} is preserved as an argument
+    and overwrites \code{file} if specified.}
 }
 
 \details{
   \code{nops_eval} is a companion function for \code{\link[exams]{exams2nops}}
   and \code{\link[exams]{nops_scan}}. It evaluates the scanned exams by computing
   the sums of the points achived and (if desired) maps them to marks. Furthermore
-  a HTML report for each individual student is generated (e.g., for upload into
+  a HTML report for each individual student is generated by default (e.g., for upload into
   a learning management system).
 
   Tutorial for NOPS workflow: \url{http://www.R-exams.org/tutorials/exams2nops/}.
@@ -81,8 +96,8 @@
 
 \value{
   A \code{data.frame} with the detailed exam results is returned invisibly.
-  It is also written to a CSV file in the current directory, along with a ZIP
-  file containing the HTML reports.
+  It is also written to a CSV file in the current directory, by default along with
+  a ZIP file containing HTML reports.
 }
 
 \seealso{\code{\link[exams]{exams2nops}}, \code{\link[exams]{nops_scan}}}
